[metadata]
name = glue-samp
url = https://github.com/glue-viz/glue-samp
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
description = A SAMP plugin for glue
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
	astropy
	glue-core>=0.15
	numpy
	qtpy

[options.entry_points]
glue.plugins =
	samp = glue_samp:setup
